--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -1,12 +1,17 @@
 :root {
     --title-color:teal;
     --secondary-color:rgb(165, 208, 202);
+    --page-color: #aec6cf;
     --light-font: white;
     --dark-font: rgb(48, 48, 48);
     --dark-color:  rgb(48, 48, 48);
+    --highlight: #fff44f;
 }
 
-
+html *
+{
+   font-family: monospace;
+}
 
 .titlebar {
     position: absolute;
@@ -21,9 +26,10 @@
 
 .body {
     position: absolute;
-    top : 180px;
-    left : 0px;
-    right : 0px; 
+    left: 150px;
+    right: 150px;
+    top: 330px;
+    background-color: var(--page-color);
 
 }
 
@@ -38,7 +44,7 @@
     color : var(--light-font);
 }
 
-.fuckedupface {
+.spinner {
     animation: spin 4s infinite;
     animation-fill-mode: none;
     animation-timing-function: linear;
@@ -71,7 +77,7 @@
     border-bottom-width: 10px;
 }
 
-.searchbar > button {
+.searchbar > a {
     font-family: monospace;
     flex-grow : 2;
     background-color: var(--secondary-color);
@@ -81,7 +87,7 @@
     border-radius: 0px;
     
 }
-.searchbar > button:hover {
+.searchbar > a:hover {
     background-color: var(--dark-color); 
     color: var(--light-font);
 }
@@ -102,3 +108,152 @@
     font-family:monospace; 
     color : var(--dark-font);
 }
+
+.personSummary {
+    display: flex;
+    justify-content: left;
+    flex-flow: row wrap;
+    margin : 50px; 
+}
+
+.personSummary > div {
+    margin: 75px;
+}
+
+.personImage {
+    width: 440px;
+    height: 660px;
+    background-color: var(--dark-color);
+    border-radius: 25px;
+    border-width: 30px;
+    border-color: var(--dark-color);
+}
+
+.personImage > img {
+    border-width: 20px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    transform: translate(20px, 30px);
+}
+
+
+.personLinks {
+    flex-grow: 3;
+    text-align: center;
+    align-content: center;
+    display: flex;
+    flex-flow: column wrap;
+
+
+}
+
+.personLinks > h2 {
+    font-family:monospace; 
+    color : var(--dark-font);
+    margin: 20px;
+}
+
+.personLinks > a {
+    font-family:monospace; 
+    color : var(--dark-font);
+    margin: 20px;
+}
+
+
+.movieSummary {
+    display: flex;
+    justify-content: left;
+    flex-flow: row wrap;
+    margin : 50px; 
+}
+
+.movieSummary > div {
+    margin: 75px;
+    
+}
+
+.movieImage {
+    width: 440px;
+    height: 660px;
+    background-color: var(--dark-color);
+    border-radius: 25px;
+    border-width: 30px;
+    border-color: var(--dark-color);
+}
+
+.movieImage > img {
+    border-width: 20px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    transform: translate(20px, 30px);
+}
+
+.movieDesc {
+    width: 500px;
+    font-family:monospace; 
+    color : var(--dark-font);
+    margin: 20px;
+    text-align: left;
+    align-content: left;
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.highlight {
+    background-color: var(--highlight);
+    height: min-content;
+    width: min-content;
+}
+.tagbox {
+    width: 600px;
+    display: flex;
+    flex-flow: row wrap;
+    flex-basis: content;    
+}
+
+.classtag {
+    background-color: var(--dark-color);
+    height: 25px;
+    width: min-content;
+    border-left-width: 10px;
+    border-right-width: 10px; 
+    text-align: center; 
+    align-items: center;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.classtag > span {
+    color: var(--page-color);
+    margin: 7px;
+}
+
+.cards {
+    display : flex;
+    flex-flow : column wrap;
+    align-content: center;
+    justify-content: flex-start;
+}
+
+.card {
+    width: 600px;
+    height: fit-content;
+    margin: 10px;
+    border-width: 10px;
+    border-radius: 10px;
+    justify-content: flex-start;
+}
+
+.card > span {
+    color : var(--dark-font);
+}
+
+.card > a {
+    color : var(--dark-font);
+}
+
+.card > img {
+    border-width: 20px;
+    border-radius: 20px;
+}
+
