Updated the top movies

--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -93,10 +93,9 @@ html *
 }
 
 .homebox {
-    display: flex;
     align-items: center;
     justify-content: center;
-    height: 500px;
+    height: auto;
 }
 
 .title {
