--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -1,267 +1,402 @@
-:root {
-    --title-color:teal;
-    --secondary-color:rgb(165, 208, 202);
-    --page-color: #aec6cf;
-    --light-font: white;
-    --dark-font: rgb(48, 48, 48);
-    --dark-color:  rgb(48, 48, 48);
-    --highlight: #fff44f;
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800,300italic,400italic,600italic,700italic,800italic);
+@import url(https://fonts.googleapis.com/css?family=Oswald);
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+body{
+  font-family: "Oswald" !important;
 }
 
-html *
-{
-   font-family: monospace;
+.result-header{
+  margin-left: 120px;
+  font-size: 3rem !important;
 }
 
-.titlebar {
-    position: absolute;
-    background-color : var(--title-color);
-    left : 0px;
-    right : 0px;
-    top : 0px; 
-    height : 180px;
-    text-align: center;
+.title-bar{
+  background-color: #1e1b26;
+  width: 100%;
+  height: 80px;
 }
 
-
-.body {
-    position: absolute;
-    left: 150px;
-    right: 150px;
-    top: 330px;
-    background-color: var(--page-color);
-
+.title{
+  font-size: 3.5rem !important;
+  color: #b28900;
+  display: inline-block;
+  margin-left: 20px;
+  margin-top: 2px;
+  text-decoration: none;
 }
 
-.headerbox {
-    display: flex;
-    align-items: center;
+.container {
+  width: 100%;
+  height: 100%;
 }
 
-
-.headertitle {
-    font-family: monospace;
-    color : var(--light-font);
+.cellphone-container {
+  width: 175px;
+  height: 250px;
+  margin: 30px;
+  border-radius: 4px;
 }
 
-.headertitle > a {
-    font-family: monospace;
-    color : var(--light-font);
+.menu {
+  position: absolute;
+  left: 12px;
+  top: 6px;
+  z-index: 999;
+}
+.menu i {
+  font-size: 40px;
+  color: #fe4141;
+  filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));
 }
 
-.spinner {
-    animation: spin 4s infinite;
-    animation-fill-mode: none;
-    animation-timing-function: linear;
+.movie-img {
+  width: 100%;
+  height: 250px;
+  background: url("https://upload.wikimedia.org/wikipedia/commons/9/93/Default_profile_picture_%28male%29_on_Facebook.jpg");
+  /*background-size: contain;*/
+  background-size: cover;
+  z-index: 111 !important;
+  box-shadow: 5px 5px 115px -14px black;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, black), color-stop(0.35, black), color-stop(0.5, black), color-stop(0.65, black), color-stop(0.85, rgba(0, 0, 0, 0.6)), color-stop(1, rgba(0, 0, 0, 0)));
 }
 
-@keyframes spin {
-    0% { transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
+.movie {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+39,1e1b26+53&0+38,1+55 */
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 38%, rgba(255, 255, 255, 0.06) 39%, rgba(30, 27, 38, 0.88) 53%, #1e1b26 55%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 38%, rgba(255, 255, 255, 0.06) 39%, rgba(30, 27, 38, 0.88) 53%, #1e1b26 55%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 38%, rgba(255, 255, 255, 0.06) 39%, rgba(30, 27, 38, 0.88) 53%, #1e1b26 55%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00ffffff", endColorstr="#1e1b26",GradientType=0 );
+  /* IE6-9 */
+  position: absolute;
+  background-size: contain;
+  background-size: cover;
+  z-index: 1 !important;
+  width: 175px;
+  height: 250px;
+  display: block;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-
-.searchbar {
-    display : flex;
-    justify-content: center;
-    flex-flow: column wrap;
-    margin : 50px; 
+.text-movie-cont {
+  position: absolute;
+  bottom: 0px;
+  margin-top: 10px;
+  padding: 0px 12px;
+  text-align: left;
+  height: auto;
+  border-radius: 5px;
+  width: 100%;
 }
 
-.searchbar > input {
-    font-family: monospace;
-    font-size: 30px;
-    text-align : center;
-    flex-grow: 2;
-    color : var(--light-font);
-    background-color: transparent;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom-color: var(--secondary-color);
-    border-bottom-width: 10px;
+.action-btn {
+  text-align: right;
+}
+.action-btn i {
+  color: #fe4141;
+  font-size: 28px;
+  text-align: right;
 }
 
-.searchbar > a {
-    font-family: monospace;
-    flex-grow : 2;
-    background-color: var(--secondary-color);
-    color: var(--dark-font);
-    height: 50px;
-    border: none;  
-    border-radius: 0px;
-    
+.watch-btn {
+  display: block;
+  border: 1px solid #fe4141;
+  border-radius: 5px;
+  padding: 4px;
+  width: 140px;
 }
-.searchbar > a:hover {
-    background-color: var(--dark-color); 
-    color: var(--light-font);
-}
-
-.homebox {
-    align-items: center;
-    justify-content: center;
-    height: auto;
+.watch-btn h3 i {
+  font-size: 14px;
+  margin-right: 2px;
+  position: relative;
+  float: left;
+  line-height: 1;
 }
 
-.title {
-    border-bottom-width: 8px;
-    border-bottom-color: var(--title-color)
+.action-row {
+  margin-top: 24px;
 }
 
-.title > h2 {
-    font-family:monospace; 
-    color : var(--dark-font);
+.summary-row {
+  margin-top: 12px;
 }
 
-.personSummary {
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
+/* TYPOGRAPHY STARTS */
+/* Fonts */
+h1, h2, h3, h4, h5 {
+  color: #e7e7e7;
+  margin: 0px;
 }
 
-.personSummary > div {
-    margin: 20px;
+h1 {
+  font-size: 1.1rem !important;
+  font-weight: 400;
 }
 
-.personImage {
-    width: 440px;
-    height: 660px;
-    background-color: var(--dark-color);
-    border-radius: 25px;
-    border-width: 30px;
-    border-color: var(--dark-color);
+h3 {
+  font-size: 14px;
+  font-weight: 400;
+  color: #fe4141;
 }
 
-.personImage > img {
-    border-width: 20px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    transform: translate(20px, 30px);
-    background-image: url(./../../dist/unisex_silhouette.png);
+h5 {
+  font-size: 12px;
+  font-weight: 400;
 }
 
-.personImage > img:before {
-    border-width: 20px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    transform: translate(20px, 30px);
+.movie-gen, .movie-likes {
+  margin: 0px;
+  padding: 0px;
+}
+.movie-gen li, .movie-likes li {
+  font-size: 12px;
+  color: #818181;
+  width: auto;
+  display: block;
+  float: left;
+  margin-right: 6px;
+  font-weight: 600;
 }
 
-.personLinks {
-    text-align: center;
-    align-content: center;
-    display: flex;
-    flex-flow: column wrap;
-
-
+.movie-likes {
+  float: right;
+}
+.movie-likes li {
+  color: #fe4141;
+}
+.movie-likes li:last-child {
+  margin-right: 0px;
+}
+.movie-likes li i {
+  font-size: 14px;
+  margin-right: 4px;
+  position: relative;
+  float: left;
+  line-height: 1;
 }
 
-.personLinks > h2 {
-    font-family:monospace; 
-    color : var(--dark-font);
-    margin: 20px;
+.movie-details {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  color: #b4b4b4;
 }
 
-.personLinks > a {
-    font-family:monospace; 
-    color : var(--dark-font);
-    margin: 20px;
+.movie-description {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #9b9b9b;
+  text-align: justify;
 }
 
-
-.movieSummary {
-    display: flex;
-    justify-content: left;
-    flex-flow: row;
+.movie-actors {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  color: #e7e7e7;
+  font-style: italic;
 }
 
-.movieSummary > div {
-    margin: 20px;
-    
+.like-circle{
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: white;
+  position: absolute;
+  right: -15px;
+  bottom: -15px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-.movieImage {
-    width: 440px;
-    height: 660px;
-    background-color: var(--dark-color);
-    border-radius: 25px;
-    border-width: 30px;
-    border-color: var(--dark-color);
+/* TYPOGRAPHY ENDS */
+/** GRID STARTS **/
+.thegrid {
+  margin: 0 auto;
 }
 
-.movieImage > img {
-    border-width: 20px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    transform: translate(20px, 30px);
+.elements-distance, .movie-details, .movie-description, .movie-actors {
+  margin: 0px;
 }
 
-.movieDesc {
-    width: 500px;
-    font-family:monospace; 
-    color : var(--dark-font);
-    margin: 20px;
-    text-align: left;
-    align-content: left;
-    display: flex;
-    flex-flow: column wrap;
+.mr-grid {
+  width: 100%;
+}
+
+.mr-grid:before, .mr-grid:after {
+  content: "";
+  display: table;
+}
+
+.mr-grid:after {
+  clear: both;
+}
+
+.mr-grid {
+  *zoom: 1;
+}
+
+.col1, .col2, .col3, .col3rest, .col4, .col4rest, .col5, .col5rest, .col6, .col6rest {
+  margin: 0% 0.5% 0.5% 0.5%;
+  padding: 1%;
+  float: left;
+  display: block;
+}
+
+/* Columns match, minus margin sum. E.G. margin-left+margin-right=1%, col2=50%-1% - added padding:1%*/
+.col1 {
+  width: 98%;
+}
+
+.col2 {
+  width: 47%;
+}
+
+.col3 {
+  width: 30.3333333333%;
+}
+
+.col4 {
+  width: 22%;
+}
+
+.col5 {
+  width: 17%;
+}
+
+.col6 {
+  width: 13.6666666667%;
+}
+
+/* Columns match with their individual number. E.G. col3+col3rest=full width row */
+.col3rest {
+  width: 63.6666666667%;
+}
+
+.col4rest {
+  width: 72%;
+}
+
+.col5rest {
+  width: 77%;
+}
+
+.col6rest {
+  width: 80.3333333333%;
+}
+
+.search{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 20px;
+}
+
+.react-autosuggest__container {
+  display: inline-block;
+}
+
+.react-autosuggest__input {
+  width: 40vw;
+  height: 30px;
+  padding: 20px 10px;
+  font-weight: 300;
+  font-size: 25px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+}
+
+.react-autosuggest__input:focus {
+  outline: none;
+}
+
+.react-autosuggest__container--open .react-autosuggest__input {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+
+.react-autosuggest__container--open .react-autosuggest__suggestions-container {
+  display: block;
+  position: absolute;
+  top: 51px;
+  width: 280px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.react-autosuggest__suggestion:hover{
+  background-color: gray;
+}
+
+.react-autosuggest__suggestion:not(:first-child) {
+  border-top: 1px solid #ddd;
+}
+
+.react-autosuggest__suggestion--focused {
+  background-color: #0C7EAF;
+  color: #fff;
+}
+
+.suggestion-content {
+  display: flex;
+  align-items: center;
+  background-repeat: no-repeat;
+}
+
+.dancounsell {
+  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/48.jpg);
+}
+
+.ladylexy {
+  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/48.jpg);
+}
+
+.mtnmissy {
+  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/mtnmissy/48.jpg);
+}
+
+.steveodom {
+  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/steveodom/48.jpg);
+}
+
+.name {
+  margin-left: 68px;
+  line-height: 45px;
 }
 
 .highlight {
-    background-color: var(--highlight);
-    height: min-content;
-    width: min-content;
-}
-.tagbox {
-    width: 500px;
-    display: flex;
-    flex-flow: row wrap;
-    flex-basis: content;    
+  color: #ee0000;
+  font-weight: bold;
 }
 
-.classtag {
-    background-color: var(--dark-color);
-    height: 25px;
-    width: min-content;
-    border-left-width: 10px;
-    border-right-width: 10px; 
-    text-align: center; 
-    align-items: center;
-    border-radius: 10px;
-    margin: 10px;
+.react-autosuggest__suggestion--focused .highlight {
+  color: #120000;
 }
-
-.classtag > span {
-    color: var(--page-color);
-    margin: 7px;
-}
-
-.cards {
-    display : flex;
-    flex-flow : column wrap;
-    align-content: center;
-    justify-content: flex-start;
-}
-
-.card {
-    width: 600px;
-    height: fit-content;
-    margin: 10px;
-    border-width: 10px;
-    border-radius: 10px;
-    justify-content: flex-start;
-}
-
-.card > span {
-    color : var(--dark-font);
-}
-
-.card > a {
-    color : var(--dark-font);
-}
-
-.card > img {
-    border-width: 20px;
-    border-radius: 20px;
-}
-
