--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -266,3 +266,43 @@ a:hover{
 .react-autosuggest__suggestion--focused .highlight {
   color: #120000;
 }
+
+.big-movie-img{
+  height: 400px;
+  width: 266px;
+  margin-bottom: 10px;
+}
+
+.stars{
+  display: inline-block;
+  position: relative;
+  top: 11px;
+}
+
+.genre-circle{
+  background-color: #1e1123;
+  display: inline-block;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 20px;
+  margin: 5px;
+}
+
+button:focus{
+  outline: none !important;
+}
+
+.table-item{
+  width: 100%;
+  padding: 10px;
+  position: relative;
+
+}
+
+.table-item-wrapper{
+  background-color: #1e1123;
+}
+
+.table-item-wrapper:nth-child(odd){
+    background-color: #2c1933;
+}
