Updated the sorting functionality

--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -307,6 +307,10 @@ button:focus{
     background-color: #2c1933;
 }
 
+.table-item-wrapper:hover{
+  background-color: black;
+}
+
 .sorting svg{
   color: white;
 }
