--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -20,6 +20,17 @@ body{
   color: white;
 }
 
+.suggestion-img{
+  height: 50px;
+  width: 35px;
+  display: inline-block;
+}
+
+.suggestion{
+  margin-left: 10px;
+  display: inline-block;
+}
+
 .result-header{
   font-size: 2.5rem !important;
   color: white;
@@ -207,14 +218,12 @@ a:hover{
   display: block;
   position: absolute;
   top: 51px;
-  width: 280px;
-  border: 1px solid #aaa;
+  width: 100%;
   background-color: #fff;
   font-weight: 300;
   font-size: 16px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
   z-index: 2;
+  border-radius: 20px;
 }
 
 .react-autosuggest__suggestions-list {
@@ -231,6 +240,7 @@ a:hover{
 
 .react-autosuggest__suggestion:hover{
   background-color: gray;
+  border-radius: 20px;
 }
 
 .react-autosuggest__suggestion:not(:first-child) {
