Updated the like functionality

--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -358,3 +358,8 @@ button:focus{
 .show-table-icon-wrapper:hover{
   background-color: black;
 }
+
+.user-login button:hover{
+  background-color: white;
+  color: black;
+}
