Liked button works completely

--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -366,7 +366,7 @@ button:focus{
 
 .heart-icon{
   cursor: pointer;
-  color: red;
+  color: #e61b44;
   font-size: 2rem;
   margin: 15px 10px;
   vertical-align: top;
