--- a/d2/src/src/css/master.css
+++ b/d2/src/src/css/master.css
@@ -372,7 +372,8 @@ button:focus{
 }
 
 .page-number-wrapper{
-  position: relative;
+  position: fixed;
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   display: inline-block;
@@ -386,10 +387,21 @@ button:focus{
   border-radius: 5px;
   display: inline-block;
   margin: 0px 10px;
-  cursor: pointer;
 }
 
 .page-number-wrapper .selected{
   color: #2f1e36;
   background-color: white;
+}
+
+.chevron-icon{
+  color: white;
+  font-size: 1.5rem;
+  margin: 0px 5px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+
+.chevron-icon:hover{
+  transform: scale(1.25);
 }
